--- a/SmsTools/SmsTools.csproj
+++ b/SmsTools/SmsTools.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AppHelper.cs" />
     <Compile Include="Authentication.cs" />
+    <Compile Include="Commands\StepwiseCommandParameter.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="Commands\ATCommand.cs" />
